--- a/environment.yaml
+++ b/environment.yaml
@@ -19,16 +19,7 @@ dependencies:
   - pandas
   - bloscpack
 
-#  - conda-forge::pyyaml=3.12
-#  - conda-forge::numpy=1.14
-#  - conda-forge::pandas=0.21
-#  - conda-forge::bloscpack=0.10.0
-
-#  - pytest
-#  - pytest-cov
-#  - pytest-pep8
-
-  - gcc=4.8
+  - defaults::gcc=4.8
   - conda-forge::cython=0.28.2
   - conda-forge::pkg-config
 
